--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ h2 {
 
             <div class="button-container">
                 <button type="button" onclick="clearCanvas()">Clear</button>
-                <button type="button" onclick="saveSignature()">Save Signature</button>
+                <button type="button" onclick="saveSignature()">Save </button>
             </div>
         </form>
     </div>
@@ -305,11 +305,10 @@ h2 {
     <h2> RECOMMENDATIONS</h2>
     <form action="/submit" method="post">
         <textarea id="message" name="message" rows="5" cols="40" placeholder="Type your message here..."></textarea><br><br>
-        <button type="submit"> Ohereza </button>
+        <button type="submit"> Send </button>
     </form>
 </body>
 </html><br> <br> <br> 
 
 <button onclick="window.print()">Print this page</button> <br> <br>
 
-<a href="https://www.rsb.gov.rw/"> Rwanda Stan
